@@ -1,0 +1,7 @@
+#!/usr/bin/env bash
+BUILDOUT_PATH=""
+POUND_RUNNER="$poundcontrol"
+POUND_SOCK="$socket"
+
+\$POUND_RUNNER -c \$POUND_SOCK $@
+
